Update fitur services tabel and api